--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Monte Carlo Tree Search for Tetris</title>
-
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
